Bug-fix: Prevent hero title content shift by adding `&nbsp;`.
- Add padding of `50px` to account for this change where
necessary.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -57,6 +57,7 @@ ul {
   transform: translate(-50%, -50%);
   align-self: center;
   z-index: 10;
+  padding-left: 50px;
 }
 
 .hero-title h1 {
@@ -87,14 +88,13 @@ ul {
   content: '';
   position: absolute;
   top: -30px;
-  left: 0;
+  left: 50px;
   width: 50px;
   height: 4px;
   border: 1px solid rgba(255, 255, 255, 0.21);
 }
 
 .hero-dot-container {
-  grid-column: 1;
   position: absolute;
   top: 3%;
   left: 5.5%;
